Add new utility tests and update dependencies
Introduced tests for `differenceBy`, `differenceWith`, and `drop` utilities, showcasing compatibility across multiple libraries. Removed unused links, adjusted `pnpm-lock.yaml`, and updated `@vitest/ui` to `3.1.4` alongside minor script improvements.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang-astro/src/pages/index.astro
+++ b/apps/ethang-astro/src/pages/index.astro
@@ -14,6 +14,7 @@ import Layout from "../layouts/Layout.astro";
                 <a rel="prefetch" href="/blog/dont-need-state-management-libraries">We Don't Need State Management
                     Libraries</a>
             </li>
+            <li><a rel="prefetch" target="_blank" href="https://utility.hello-a8f.workers.dev/#/">You Should Use lodash</a></li>
             <li>
                 <a rel="prefetch" href="/blog/your-lodash-get-implementation-sucks">You lodash.get Implementation
                     Sucks</a>
@@ -26,9 +27,6 @@ import Layout from "../layouts/Layout.astro";
             </li>
             <li>
                 <a rel="prefetch" href="/blog/local-first">The Local First Stack</a>
-            </li>
-            <li>
-                <a rel="prefetch" href="/blog/looking-at-no-misused-spread">Looking At: no-misused-spread</a>
             </li>
         </ul>
     </main>
