Add Newsletter link to navigation menus
This update introduces a link to the Newsletter in both navigation menus. The link directs users to a LinkedIn page and opens in a new tab. Additionally, minor formatting adjustments were made to improve code readability.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang-astro/src/layouts/Layout.astro
+++ b/apps/ethang-astro/src/layouts/Layout.astro
@@ -24,7 +24,8 @@ const pageDescription = description ?? "Messin' around on the web sometimes.";
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+          rel="stylesheet">
 
     <meta name="generator" content={Astro.generator}/>
     <title>{pageTitle}</title>
@@ -44,6 +45,9 @@ const pageDescription = description ?? "Messin' around on the web sometimes.";
                     >Courses</a
                     >
                 </li>
+                <li><a class="link"
+                       href="https://www.linkedin.com/build-relation/newsletter-follow?entityUrn=7316126013938143232"
+                       target="_blank">Newsletter</a></li>
             </ul>
         </nav>
         <div class="divider mx-4"></div>
@@ -106,6 +110,9 @@ const pageDescription = description ?? "Messin' around on the web sometimes.";
                     >Courses</a
                     >
                 </li>
+                <li><a class="link"
+                       href="https://www.linkedin.com/build-relation/newsletter-follow?entityUrn=7316126013938143232"
+                       target="_blank">Newsletter</a></li>
             </ul>
         </nav>
     </div>
