--- a/apps/ethang-astro/src/pages/index.astro
+++ b/apps/ethang-astro/src/pages/index.astro
@@ -4,9 +4,11 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout>
     <main class="prose">
+        <div class="mb-8 text-4xl">
+            Read: <a class="link" rel="prefetch" href="/blog/how-i-code">How I Code</a>
+        </div>
         <h1 class="mb-4">Reflections on Tech</h1>
         <ul>
-            <li><a rel="prefetch" href="/blog/typescript-doesnt-replace-javascript">TypeScript Is An Additional Layer of Protection, Not a Replacement</a></li>
             <li>
                 <a rel="prefetch" href="/blog/javascript-standard-library">Why You Should Install That JS Library</a>
             </li>
@@ -14,7 +16,8 @@ import Layout from "../layouts/Layout.astro";
                 <a rel="prefetch" href="/blog/dont-need-state-management-libraries">We Don't Need State Management
                     Libraries</a>
             </li>
-            <li><a rel="prefetch" target="_blank" href="https://utility.hello-a8f.workers.dev/#/">You Should Use lodash</a></li>
+            <li><a rel="prefetch" target="_blank" href="https://utility.hello-a8f.workers.dev/#/">You Should Use
+                lodash</a></li>
             <li>
                 <a rel="prefetch" href="/blog/your-lodash-get-implementation-sucks">You lodash.get Implementation
                     Sucks</a>
