Enhance "How I Code" page structure and improve homepage readability
Optimized "How I Code" page with deeper sub-navigation for clarity and accessibility. Simplified homepage by adjusting featured blog links and removing outdated or redundant items to improve user experience and navigation flow.

Signed-off-by: ethang <hello@ethang.email>

--- a/apps/ethang-astro/src/pages/index.astro
+++ b/apps/ethang-astro/src/pages/index.astro
@@ -4,23 +4,12 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout>
     <main class="prose">
-        <div class="mb-8 text-4xl">
-            Read: <a class="link" rel="prefetch" href="/blog/how-i-code">How I Code</a>
-        </div>
         <h1 class="mb-4">Reflections on Tech</h1>
         <ul>
-            <li>
-                <a rel="prefetch" href="/blog/javascript-standard-library">Why You Should Install That JS Library</a>
-            </li>
+            <li><a rel="prefetch" href="/blog/how-i-code">How I Code</a></li>
             <li>
                 <a rel="prefetch" href="/blog/dont-need-state-management-libraries">We Don't Need State Management
                     Libraries</a>
-            </li>
-            <li><a rel="prefetch" target="_blank" href="https://utility.hello-a8f.workers.dev/#/">You Should Use
-                lodash</a></li>
-            <li>
-                <a rel="prefetch" href="/blog/your-lodash-get-implementation-sucks">You lodash.get Implementation
-                    Sucks</a>
             </li>
             <li>
                 <a rel="prefetch" href="/blog/forcing-react">Forcing React to be What It Isn't</a>
